2002-11-11  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (RedrawWindow):
	(HandleButtonRelease):
	(HandleEvents):
	(LoopOnEvents):
	(HideTaskBar):
	* FvwmTaskBar/FvwmTaskBar.h:
	* FvwmTaskBar/Start.c (StartButtonDraw);
	* FvwmTaskBar/Start.h:
	* FvwmTaskBar/ButtonArray.c (ButtonDraw):
	(DrawButtonArray):
	* FvwmTaskBar/ButtonArray.h
	Started to Clip redrawing

2002-11-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmProxy/FvwmProxy.c:
	many enhancements
	(CloseOneWindow):
	(OpenOneWindow):
	(delete_ProxyWindow):
	do not destroy proxy windows when closing them
	(MarkProxy):
	(ProcessMessage):
	(DispatchEvent):
	fixed race condition w/ EnterNotify

	* FvwmProxy/ConfigFvwmProxyDefaults:
	added file

2002-11-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmProxy/FvwmProxy.c (DrawWindow):
	removed unsused variables

	* FvwmIconMan/FvwmIconMan.h:
	* FvwmIconMan/fvwm.c (ProcessMessage):
	(win_in_viewport):
	(iconify):
	(icon_location):
	* FvwmIconMan/FvwmIconMan.c (main):
	FvwmIconMan uses the icon position to decide whether a window is managed
	or not

2002-11-09  olicha  <olivier.chapuis@free.fr>

	* FvwmProxy/FvwmProxy.c (parse_options):
	(DrawPicture):
	(DrawWindow):
	(ProcessMessage):
	(main):
	Added Flocale and Picture support

2002-11-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmRearrange/FvwmRearrange.c (parse_args):
	new options -sp and -sd

	* FvwmWinList/List.c (IsItemVisible):
	* FvwmWinList/FvwmWinList.c (ProcessMessage):
	* FvwmTaskBar/List.c (IsItemIndexSticky):
	* FvwmTaskBar/FvwmTaskBar.c (redraw_buttons):
	* FvwmSaveDesk/FvwmSaveDesk.c (do_save_command):
	* FvwmSave/FvwmSave.c (do_save):
	* FvwmRearrange/FvwmRearrange.c (parse_args):
	(parse_args):
	(is_suitable_window):
	* FvwmPager/x_pager.c (MoveStickyWindows):
	(Hilight):
	(MoveWindow):
	(IconMoveWindow):
	* FvwmIdent/FvwmIdent.c (MakeList):
	* FvwmIconMan/fvwm.c (count_nonsticky_in_hashtab):
	(win_in_viewport):
	* FvwmIconBox/FvwmIconBox.c (process_message):
	(process_message):