@@ -1,3 +1,8 @@
+2002-11-12  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmProxy/FvwmProxy.c:
+	fixed page and desk change
+
 2002-11-11  olicha  <olivier.chapuis@free.fr>
 
 	* FvwmTaskBar/FvwmTaskBar.c (RedrawWindow):
